--- a/src/ui/comment/Comments.css
+++ b/src/ui/comment/Comments.css
@@ -1,5 +1,5 @@
 #comments {
-    border-top: 1px solid var(--gray-light);
+    border-top: 1px solid var(--bs-gray-400);
     margin-top: .5rem;
     padding-top: 1rem;
 }
