--- a/src/ui/compose/ComposeTextEditableIcon.css
+++ b/src/ui/compose/ComposeTextEditableIcon.css
@@ -1,5 +1,5 @@
 .compose-text-editable-icon {
-    color: var(--gray-light);
+    color: var(--bs-gray-400);
     font-size: .75em;
     padding-left: .75em;
 }
