--- a/src/ui/feed/FeedTopButton.css
+++ b/src/ui/feed/FeedTopButton.css
@@ -20,7 +20,7 @@
 }
 
 .feed-top-button {
-    background-color: var(--white-dark);
+    background-color: var(--bs-gray-100);
     color: var(--bs-info);
     display: inline-block;
     padding: .2rem .7rem;
