--- a/src/ui/sharedialog/CopyQuoteButton.css
+++ b/src/ui/sharedialog/CopyQuoteButton.css
@@ -1,5 +1,5 @@
 .copy-quote {
-    background-color: var(--gray-ultralight);
+    background-color: var(--bs-gray-200);
     border: 0;
     border-radius: 50%;
     width: 40px;
