--- a/src/ui/comment/RepliedTo.css
+++ b/src/ui/comment/RepliedTo.css
@@ -1,7 +1,7 @@
 .replied-to {
     margin-bottom: .3rem;
     font-size: 90%;
-    border-left: 3px var(--gray-light) solid;
+    border-left: 3px var(--bs-gray-400) solid;
     padding-left: .5em;
 }
 
@@ -10,18 +10,18 @@
 }
 
 .replied-to .icon {
-    color: var(--gray-medium);
+    color: var(--bs-gray-500);
     margin-right: .7em;
 }
 
 .replied-to .node-name {
-    color: var(--bs-gray);
+    color: var(--bs-gray-600);
     position: relative;
     top: -.1em;
 }
 
 .replied-to .heading {
-    color: var(--bs-gray);
+    color: var(--bs-gray-600);
     position: relative;
     top: -.1em;
     margin-left: .5em;
@@ -32,7 +32,7 @@
 }
 
 .replied-to .unset {
-    color: var(--gray-medium);
+    color: var(--bs-gray-500);
     background-color: transparent;
     border: 0;
     font-weight: bold;
