--- a/src/ui/control/LabelButton.css
+++ b/src/ui/control/LabelButton.css
@@ -1,5 +1,5 @@
 .form-label-button {
-    color: var(--gray-medium);
+    color: var(--bs-gray-500);
     border-radius: 3px;
     padding-left: 0.3rem;
     padding-right: 0.3rem;
@@ -8,7 +8,7 @@
 
 .form-label-button:hover {
     background-color: var(--highlight);
-    color: var(--bs-gray);
+    color: var(--bs-gray-600);
 }
 
 .form-label-button:hover.form-label-button-undo {
