--- a/src/ui/control/richtexteditor/RichTextImageDialogDropzone.css
+++ b/src/ui/control/richtexteditor/RichTextImageDialogDropzone.css
@@ -1,5 +1,5 @@
 .rich-text-image-dialog-dropzone {
-    color: var(--bs-gray);
+    color: var(--bs-gray-600);
     text-align: center;
     border: 2px dashed var(--bs-info);
     padding: 1em;
