--- a/src/ui/instant/Instants.css
+++ b/src/ui/instant/Instants.css
@@ -18,7 +18,7 @@
 
 #instants .header {
     padding: 0 .75rem;
-    border-bottom: 1px solid var(--gray-light);
+    border-bottom: 1px solid var(--bs-gray-400);
     display: flex;
     justify-content: space-between;
 }
@@ -32,7 +32,7 @@
     padding-left: .75rem;
     padding-right: .75rem;
     margin-bottom: -.25rem;
-    border-top: 1px solid var(--gray-light);
+    border-top: 1px solid var(--bs-gray-400);
     display: flex;
     justify-content: flex-end;
 }
@@ -47,7 +47,7 @@
 }
 
 #instants .build-number {
-    color: var(--gray-light);
+    color: var(--bs-gray-400);
     font-size: .7rem;
     position: relative;
     top: .5em;
