--- a/src/ui/posting/Posting.css
+++ b/src/ui/posting/Posting.css
@@ -1,6 +1,6 @@
 .posting {
     position: relative;
-    border: var(--gray-light) 1px solid;
+    border: var(--bs-gray-400) 1px solid;
     border-radius: 5px;
     margin-bottom: 1rem;
     padding: .5rem;
@@ -66,7 +66,7 @@
 .posting > .content FIGCAPTION {
     line-height: 1.2;
     margin-top: .3em;
-    color: var(--bs-gray);
+    color: var(--bs-gray-600);
     margin-left: .75em;
 }
 
