--- a/src/ui/profile/edit/ProfileEditor.css
+++ b/src/ui/profile/edit/ProfileEditor.css
@@ -1,6 +1,6 @@
 .profile-editor {
     background-color: white;
-    border: var(--gray-light) 1px solid;
+    border: var(--bs-gray-400) 1px solid;
     border-radius: 5px;
     padding: 1rem;
     margin-top: 1rem;
