--- a/src/ui/profile/view/ProfileView.css
+++ b/src/ui/profile/view/ProfileView.css
@@ -1,7 +1,7 @@
 .profile-view {
     display: flow-root;
     background-color: white;
-    border: var(--gray-light) 1px solid;
+    border: var(--bs-gray-400) 1px solid;
     border-radius: 5px;
     padding: 1rem;
     margin-top: 1rem;
