--- a/src/ui/quicktips/QuickTips.css
+++ b/src/ui/quicktips/QuickTips.css
@@ -35,7 +35,7 @@
 
 .quick-tips .blog BUTTON {
     color: white;
-    background-color: var(--bs-gray-dark);
+    background-color: var(--bs-gray-800);
     font-size: 1.5em;
     width: 1.8em;
     border: 0;
