--- a/src/ui/settings/SettingsPage.css
+++ b/src/ui/settings/SettingsPage.css
@@ -1,9 +1,9 @@
 .settings-notebook {
     background-color: white;
     padding: 0.5rem;
-    border-left: var(--gray-light) 1px solid;
-    border-right: var(--gray-light) 1px solid;
-    border-bottom: var(--gray-light) 1px solid;
+    border-left: var(--bs-gray-400) 1px solid;
+    border-right: var(--bs-gray-400) 1px solid;
+    border-bottom: var(--bs-gray-400) 1px solid;
     border-radius: 5px;
 }
 
