Streamlined zindexes. Separate portal for node cards.

--- a/src/ui/feed/FeedTopButton.css
+++ b/src/ui/feed/FeedTopButton.css
@@ -1,6 +1,6 @@
 .feed-top-box {
     position: absolute;
-    z-index: 1020;
+    z-index: var(--zindex-feed-top-button);
     left: 0;
     width: 100%;
     display: block;
