--- a/src/ui/control/ModalDialog.css
+++ b/src/ui/control/ModalDialog.css
@@ -1,5 +1,5 @@
 .modal-backdrop.risen {
-    z-index: 1080;
+    z-index: var(--zindex-risen-modal-backdrop);
 }
 
 .modal {
@@ -7,7 +7,7 @@
 }
 
 .modal.risen {
-    z-index: 1090;
+    z-index: var(--zindex-risen-modal);
 }
 
 .modal-children {
