--- a/src/ui/mainmenu/RefreshIndicator.css
+++ b/src/ui/mainmenu/RefreshIndicator.css
@@ -4,7 +4,7 @@
     visibility: hidden;
     height: 3px;
     width: 0;
-    z-index: 1020;
+    z-index: var(--zindex-sticky);
 }
 
 .refresh-indicator.active {
