--- a/src/ui/control/EmojiChoice.css
+++ b/src/ui/control/EmojiChoice.css
@@ -25,23 +25,17 @@
     border-radius: 5px;
 }
 
-.emoji-selector .choice .dimmer {
-    position: absolute;
-    z-index: 100;
-    left: 0;
-    top: 0;
-    width: 3rem;
-    height: 3.3rem;
-    background-color: rgba(255, 255, 255, 0.8);
+.emoji-selector .choice.dimmed {
+    filter: opacity(20%);
 }
 
-.emoji-selector .choice:hover .dimmer {
-    background-color: rgba(255, 255, 255, 0.4);
+.emoji-selector .choice.dimmed:hover {
+    filter: opacity(60%);
 }
 
 .emoji-selector .choice .marker {
     position: absolute;
-    z-index: 99;
+    z-index: var(--zindex-text-overlay);
     right: 0;
     top: 0;
     font-size: 0.8rem;
