--- a/src/ui/instant/InstantStory.css
+++ b/src/ui/instant/InstantStory.css
@@ -19,10 +19,13 @@
     border-bottom: 1px solid var(--bs-green);
 }
 
-#instants .instant A {
+#instants .instant A.outer {
     display: block;
     color: black;
     text-decoration: none;
+    grid-row: 1 / 3;
+    grid-column: 1 / 3;
+    z-index: var(--zindex-text-overlay);
 }
 
 #instants .instant .summary-avatar {
