Paragraphs in posts and comments should have margin-top similar to margin-bottom.

--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -48,6 +48,10 @@
     }
 }
 
+.comment .content P {
+    margin-top: 1rem;
+}
+
 .comment .content IMG:not(.emoji) {
     width: auto;
     height: auto;
