--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -3,7 +3,7 @@
     --highlight: rgba(0, 0, 0, .05);
     --highlight-blue: rgba(0, 123, 255, .1);
     --highlight-cyan: #f0fafa;
-    --cyan-light: #96d6e0;
+
     /*
      * Bootstrap gray colors
      *
@@ -17,6 +17,10 @@
      * --bs-gray-200: #e9ecef; (ultralight)
      * --bs-gray-100: #f8f9fa;
      */
+    --bs-blue-100: #cfe2ff;
+    --bs-blue-200: #9ec5fe;
+
+    --cyan-light: #96d6e0;
     --green-light: #42d042; /* forest green + 20% lighter */
     --red-light: #df5a5a; /* fire brick + 20% lighter */
 
