Click on home avatar leads to the home profile page.

--- a/src/ui/mainmenu/vertical/VerticalMenu.css
+++ b/src/ui/mainmenu/vertical/VerticalMenu.css
@@ -19,7 +19,6 @@
     color: var(--status-icon-highlight);
 }
 
-#vertical-menu .home-name {
-    display: block;
-    text-align: center;
+#vertical-menu .home-avatar {
+    margin-left: 0;
 }
