--- a/src/ui/instant/InstantStory.css
+++ b/src/ui/instant/InstantStory.css
@@ -23,9 +23,22 @@
     display: block;
     color: black;
     text-decoration: none;
+    z-index: var(--zindex-text-overlay);
+}
+
+#instants .instant A.cells-all {
     grid-row: 1 / 3;
     grid-column: 1 / 3;
-    z-index: var(--zindex-text-overlay);
+}
+
+#instants .instant A.cells-avatar {
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+}
+
+#instants .instant A.cells-summary {
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
 }
 
 #instants .instant .summary-avatar {
