--- a/src/ui/posting/Posting.css
+++ b/src/ui/posting/Posting.css
@@ -71,11 +71,15 @@
     max-height: min(35rem, var(--height, 200vh));
 }
 
+.posting > .content FIGURE {
+    display: inline-block;
+}
+
 .posting > .content FIGCAPTION {
-    line-height: 1.2;
-    margin-top: .3em;
+    font-size: .875em;
+    line-height: 1.5;
+    margin-top: .5em;
     color: var(--bs-gray-600);
-    margin-left: .75em;
 }
 
 .posting > .content .read-more {
