Set overscroll-behavior where it is needed.

--- a/src/ui/control/field/AvatarField.css
+++ b/src/ui/control/field/AvatarField.css
@@ -33,6 +33,7 @@
     max-height: calc(312px + .75rem);
     overflow-y: auto;
     overflow-x: hidden;
+    overscroll-behavior-y: none;
 }
 
 @media only screen and (max-width: 575px) {
