--- a/src/ui/comment/RepliedTo.css
+++ b/src/ui/comment/RepliedTo.css
@@ -50,6 +50,7 @@
     width: max-content;
     max-height: 33vh;
     overflow: auto;
+    overscroll-behavior: none;
 }
 
 @media only screen and (min-width: 992px) {
