--- a/src/ui/profile/edit/avatar/AvatarSelector.css
+++ b/src/ui/profile/edit/avatar/AvatarSelector.css
@@ -7,6 +7,7 @@
     max-height: calc(312px + .75rem);
     overflow-y: auto;
     overflow-x: hidden;
+    overscroll-behavior-y: none;
 }
 
 @media only screen and (max-width: 575px) {
