--- a/src/ui/reactionsdialog/ReactionsDialog.css
+++ b/src/ui/reactionsdialog/ReactionsDialog.css
@@ -50,6 +50,7 @@
     min-height: 30vh;
     max-height: 80vh;
     overflow-y: auto;
+    overscroll-behavior-y: none;
     outline: none;
     font-size: 1rem;
 }
