When FeedGotoButton is open, place it over other content in the feed header.

--- a/src/ui/page/PageHeader.css
+++ b/src/ui/page/PageHeader.css
@@ -17,6 +17,7 @@
 }
 
 #page-header .panel {
+    position: relative;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
