--- a/src/ui/lightbox/LightBox.css
+++ b/src/ui/lightbox/LightBox.css
@@ -1,15 +1,20 @@
-.lightbox-download {
+.lightbox-button {
     width: 40px;
     height: 35px;
     display: inline-block;
     color: white;
+    background: transparent;
+    border: 0;
     opacity: 0.7;
-    padding: 1px 0 1px 10px;
     font-size: 110%;
     vertical-align: top;
 }
 
-.lightbox-download:hover {
+.lightbox-button:hover {
     color: white;
     opacity: 1;
+}
+
+.lightbox-download {
+    padding: 1px 0 1px 10px;
 }
