Dropdown menu on Share button in lighbox. Allows to copy a link to the image in the post/comment or to the image file itself.

--- a/src/ui/control/DropdownMenu.css
+++ b/src/ui/control/DropdownMenu.css
@@ -1,10 +1,15 @@
 .dropdown-menu {
     pointer-events: none;
     margin: unset;
+    line-height: var(--bs-body-line-height);
 }
 
 .dropdown-menu.show {
     pointer-events: auto;
+}
+
+.dropdown-menu .dropdown-item {
+    cursor: pointer;
 }
 
 .dropdown-menu A.dropdown-item:hover {
