--- a/src/ui/compose/ComposeIconButton.css
+++ b/src/ui/compose/ComposeIconButton.css
@@ -1,13 +1,14 @@
 .composer-icon {
     display: inline-block;
-    margin-bottom: 0.7rem;
-    margin-right: 0.5rem;
+    margin-bottom: .7rem;
+    margin-right: .5rem;
     font-size: 1.8rem;
+    background-color: transparent;
     color: var(--bs-gray-400);
+    border-width: 0;
     border-radius: 3px;
-    padding-left: 0.3rem;
-    padding-right: 0.3rem;
-    cursor: pointer;
+    padding-left: .3rem;
+    padding-right: .3rem;
 }
 
 .composer-icon:hover {
