Viewing a gallery in a post expanded and loading all postings linked to gallery images.

--- a/src/ui/entry/EntryImage.css
+++ b/src/ui/entry/EntryImage.css
@@ -1,3 +1,7 @@
+.entry .entry-image IMG {
+    transition: filter .15s ease-in-out;
+}
+
 .entry .entry-image:hover IMG {
     filter: brightness(90%);
 }
