--- a/src/ui/entry/EntryGallery.css
+++ b/src/ui/entry/EntryGallery.css
@@ -1,5 +1,6 @@
 .entry .gallery {
     display: flex;
+    position: relative;
 }
 
 .posting .gallery {
@@ -113,4 +114,36 @@
     .comment .gallery.single.vertical .entry-image IMG {
         max-height: min(33vh, var(--image-height));
     }
+}
+
+.entry .gallery .gallery-expand {
+    position: absolute;
+    top: .25rem;
+    right: .25rem;
+    background-color: var(--bs-gray-800);
+    border: 0;
+    border-radius: .25em;
+    color: var(--bs-gray-300);
+    opacity: 0;
+    transition: opacity .15s ease-in-out;
+    font-size: 1.3em;
+    display: block;
+    width: 1.75em;
+    height: 1.75em;
+    z-index: var(--zindex-text-overlay);
+}
+
+@media only screen and (max-width: 575px) {
+    .entry .gallery .gallery-expand {
+        opacity: .5;
+        font-size: 1em;
+    }
+}
+
+.entry .gallery:hover .gallery-expand {
+    opacity: .5;
+}
+
+.entry .gallery:hover .gallery-expand:hover {
+    opacity: 1;
 }
