Display in NodeCard the total number of stories and creation date of the last one.

--- a/src/ui/nodename/NodeCard.css
+++ b/src/ui/nodename/NodeCard.css
@@ -53,6 +53,14 @@
     margin-top: .2em;
 }
 
+.node-card .stories {
+    margin-top: .5em;
+}
+
+.node-card .stories TIME {
+    text-decoration: underline dotted;
+}
+
 .node-card .people {
     margin-top: .5em;
 }
