Display link preview delete button in the composer.

--- a/src/ui/entry/EntryLinkPreview.css
+++ b/src/ui/entry/EntryLinkPreview.css
@@ -1,12 +1,16 @@
-A.link-preview {
+A.link-preview, DIV.link-preview {
     background-color: var(--bs-gray-200);
     color: black;
     border: solid 1px var(--bs-gray-400);
     vertical-align: top;
 }
 
+DIV.link-preview {
+    position: relative;
+}
+
 @media only screen and (min-width: 576px) {
-    A.link-preview {
+    A.link-preview, DIV.link-preview {
         display: inline-flex;
         width: calc(50% - .25rem);
         margin-right: .25rem;
@@ -14,14 +18,14 @@ A.link-preview {
 }
 
 @media only screen and (max-width: 575px) {
-    A.link-preview {
+    A.link-preview, DIV.link-preview {
         display: flex;
         margin-left: -.5rem;
         margin-right: -.5rem;
     }
 }
 
-A.link-preview.large {
+A.link-preview.large, DIV.link-preview.large {
     flex-direction: column;
 }
 
@@ -33,28 +37,33 @@ A.link-preview:hover {
     background-color: var(--bs-gray-300);
 }
 
-A.link-preview .details {
+.link-preview .details {
     flex: auto;
     padding: .5rem 1rem;
     overflow-wrap: anywhere;
 }
 
-A.link-preview .title {
+.link-preview .title {
     font-weight: bold;
     font-size: 1.05em;
 }
 
-A.link-preview .site {
+.link-preview .site {
     margin-top: .25em;
     color: var(--bs-gray-600);
 }
 
-A.link-preview .description {
+.link-preview .description {
     color: var(--bs-gray-800);
     line-height: 1.2;
 }
 
-A.link-preview .site .bullet {
+.link-preview .site .bullet {
     margin-left: .5em;
     margin-right: .5em;
+}
+
+.link-preview .delete-button {
+    top: -.25rem;
+    right: -.1rem;
 }
