--- a/src/ui/entry/EntryLinkPreview.css
+++ b/src/ui/entry/EntryLinkPreview.css
@@ -69,6 +69,7 @@ DIV.link-preview:hover .edit-icon {
 .link-preview .site {
     margin-top: .25em;
     color: var(--bs-gray-600);
+    font-size: .9em;
 }
 
 .link-preview .description {
