--- a/src/ui/entry/EntryLinkPreview.css
+++ b/src/ui/entry/EntryLinkPreview.css
@@ -50,10 +50,8 @@ A.link-preview:hover {
 .link-preview .title {
     font-weight: bold;
     font-size: 1.05em;
-}
-
-.link-preview.small .title {
     line-height: 1.1;
+    margin-bottom: .25em;
 }
 
 .link-preview .site {
