Extracted <Principal> into a separate component.

--- a/src/ui/posting/PostingVisibility.css
+++ b/src/ui/posting/PostingVisibility.css
@@ -1,9 +1,8 @@
 .posting > .owner-line .visibility {
-    font-size: 0.8rem;
     color: var(--bs-gray-500);
-    padding-left: .4em;
+    padding-left: .4rem;
 }
 
 .posting > .owner-line .visibility .principal {
-    padding-left: .4em;
+    padding-left: .4rem;
 }
