Implemented viewComments permission for postings.

--- a/src/ui/comment/Comments.css
+++ b/src/ui/comment/Comments.css
@@ -3,3 +3,9 @@
     margin-top: .5rem;
     padding-top: 1rem;
 }
+
+#comments.disabled {
+    font-style: italic;
+    text-align: center;
+    margin-bottom: .5rem;
+}
