Ability to set default immediately from PrincipalField.

--- a/src/ui/control/PrincipalSelect.css
+++ b/src/ui/control/PrincipalSelect.css
@@ -51,3 +51,8 @@
 .form-group .principal-select {
     align-self: center;
 }
+
+.form-group .principal-select ~ .set-default {
+    font-size: .9rem;
+    padding: 0 .75rem;
+}
