--- a/src/ui/comment/CommentCompose.css
+++ b/src/ui/comment/CommentCompose.css
@@ -26,3 +26,10 @@
 #comment-composer .buttons {
     flex: 100%;
 }
+
+#comment-composer.disabled {
+    text-align: center;
+    border-top: solid 1px var(--bs-gray-400);
+    border-bottom: solid 1px var(--bs-gray-400);
+    color: var(--bs-gray-600);
+}
